# is-extglob

./: CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs
tests/: added.rs  conformance.rs  property.rs  unclosed_heads_perf.rs
